# programming

./: .gitignore  README.md  env_read.c
bash/: README.md
c-cpp/filesystem/: unlink.c
fs/: monitor_proc.c  notifier.c  read_pipe.c  unroll_path.c
glib/: CMakeLists.txt  load_parse_config.c  split_str.c
kernel/: process_watcher.c
networking/: default_route.c  get_eth_speed.c  get_interfaces.c  get_ip_addr.c  netlink_event_monitor.c  parse_can_id.c  set_eth_speed.c
other/: bit_ops.c  data_type_utils.c  linked_list.c  print_utils.c
process/: get_running_apps.c  process_monitor.c
python/: README.md
system/: env_read.c  hdd_info.c  usb_reset.c
